<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewResume"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textResume"
                style="@android:style/Widget.ActionButton.CloseMode"
                android:textStyle="bold"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextEtat_civil"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TextNom"
                android:fontFamily="cursive"
                android:textSize="30dp"
                style="@android:style/Widget.ActionButton.CloseMode"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/Text_Nom"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TextPrenom"
                android:fontFamily="cursive"
                android:textSize="30dp"
                style="@android:style/Widget.ActionButton.CloseMode"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/Text_Prenom"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TextDateNaiss"
                android:fontFamily="cursive"
                android:textSize="30dp"
                style="@android:style/Widget.ActionButton.CloseMode"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/Text_Date"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TextVilleNaiss"
                android:fontFamily="cursive"
                android:textSize="30dp"
                style="@android:style/Widget.ActionButton.CloseMode"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/Text_Ville"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TextDepartement"
                android:fontFamily="cursive"
                android:textSize="30dp"
                style="@android:style/Widget.ActionButton.CloseMode"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/Text_Depart"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Text_Num"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_vos_num"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textSize="25dp" />

            <ListView
                android:id="@+id/list_Num"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal" />

    </LinearLayout>
    </LinearLayout>
</ScrollView>